--- a/client/package.json
+++ b/client/package.json
@@ -2,17 +2,20 @@
   "name": "client",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
+       "start": "vite",
+       "build": "vite build",
+       "test": "vite test",
+       "serve": "vite preview"
+   },
   "dependencies": {
+    "express": "^4.21.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "esbuild": "^0.14.0",
     "vite": "^2.0.1"
   }
 }
