--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.0.0",
   "scripts": {
+       "dev": "vite",
        "start": "vite",
        "build": "vite build",
        "test": "vite test",
