--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,12 @@
   "name": "client",
   "version": "0.0.0",
   "scripts": {
-       "dev": "vite",
-       "start": "vite",
-       "build": "vite build",
-       "test": "vite test",
-       "serve": "vite preview"
-   },
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "test": "vite test",
+    "serve": "vite preview"
+  },
   "dependencies": {
     "express": "^4.21.0",
     "react": "^17.0.0",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "esbuild": "^0.14.0",
+    "tailwindcss": "^3.4.14",
     "vite": "^2.0.1"
   }
 }
